--- a/about.html
+++ b/about.html
@@ -11,7 +11,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet"> 
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap" rel="stylesheet">      
+    <link href="https://fonts.googleapis.com/css2?family=Finger+Paint&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200&display=swap" rel="stylesheet">     
     <title>Typing</title>
 
 </head>
@@ -33,6 +35,7 @@
 
 <main>
     <div class="main1" id="main1">
+
    <div class="wrapper"> <div class="welcome"> 
          <div class="maintext">
           <span style="color: #665DF5;">Realistic </span>typing test
@@ -44,9 +47,17 @@
 
     </div>
 </div>
-     <div class="why"></div>
+     <div class="why">
+         <div class="imgdiv">
+             <h1>How to play ?</h1>
+            <img src="forgot 1.svg" alt="">
+
+         </div>
+
+     </div>
         </div>
- 
+        
+        <div class="main2"></div>
 </main>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
