--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<script data-ad-client="ca-pub-9115055122604489" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
     <meta charset="UTF-8">
     <link rel="stylesheet" href="about.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -98,7 +98,7 @@
             <div class="calculation-heading">Calculations</div>
             <div class="wpm-wrapper">
                 <div class="wpm"> <h3 class="wpm1">WPM</h3></div>
-                <div class="wpmex"> <h3 class='wpm2'> Words per minute <br>Net WPM is used instead of gross WPM.If you want to know the difference between them click <a href="https://www.speedtypingonline.com/typing-equations">here.</a></h3></div>
+                <div class="wpmex"> <h3 class='wpm2'> Words per minute <br>Net WPM is used instead of gross WPM.If you want to know the difference between them click <a href="https://www.speedtypingonline.com/typing-equations" target="_blank">here.</a></h3></div>
             </div>
             <div class="accuracy-wrapper">
                 <div class="acc"><h3 class="acc1">Accuracy</h3></div>
@@ -107,7 +107,10 @@
         </div>
 
 </main>
-<footer></footer>
+<footer>
+    <div class="footertxt"id="backtotop">Backtotop</div>
+    
+</footer>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrollTrigger.min.js" integrity="sha512-QcYm1q7RbnXmwY7HJ0H7938IS0MalTPYqGUF0fIwQgEjMBt2tqjDBt+R5I+ppdwEohjMdHnFU0H+RxmrGQ8qcg==" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
 <script src="about.js"></script>   
