--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Redressed&display=swap" rel="stylesheet">
+<meta name="google-site-verification" content="AtvwPFZXImhPTWisn8iOLQsXg8FOILVf4Bc1CMcHabE" />
     
 </head>
 
